--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
-    "mongoose": "^8.8.0"
+    "mongoose": "^8.8.0",
+    "ws": "^8.18.0"
   }
 }
