--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "countries-and-timezones": "^3.7.2",
+    "countries-list": "^3.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
